--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -127,7 +126,8 @@
         Dengan kualitas terjaga, kedelai kami menjadi pilihan utama untuk usaha kuliner, 
         minuman sehat, dan berbagai produk pangan berkualitas.
       </p>
-      <button class="cta-btn">Kenali Produk Kami</button>
+     <a href="https://dewanpenggalang.github.io/DEWAN-PENGGALANG/"class="cta-btn" target="_blank">WEBSITE LAINNYA</a>
+      
     </div>
     <img src="https://images.unsplash.com/photo-1555465083-a845797ef750?" alt="Kedelai Premium">
   </section>
@@ -147,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
